@@ -29,6 +29,7 @@
             \n * Fixed Error-Messages not beeing displayed with Server v1.5.3
             \n * Fixed POST-Data not beeing interpreted correctly by the server, now sending JSON-encoded data
             \n * Two more bugs with starred/published articles fixed
+            \n * Fixed OutOfMemoryException when opening virtual categories
         </item>
     
         <item>v0.9.6:
